test emojis out

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>My profile 😎</title>
+  <title>My profile </title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700;900&family=Space+Mono:wght@400;700&display=swap" rel="stylesheet">
  <link href="https://fonts.googleapis.com/css2?family=Amiri:wght@400;700&display=swap" rel="stylesheet">
@@ -13,12 +13,12 @@
 <body>
   <div class="container">
     <div class="card-white">
-      <h1>Hello, I'm fabre 😳</h1>
+      <h1>Hello, I'm fabre </h1>
       <h2>graphic and UX&UI designer and developer</h2>
       <img src="/images/me_profile.jpeg" class="img-circle" width="100px" alt="">
       <p> I am a young graphic and UI designer (UX lover), that after 2 years working in a web developer and marketing agency, wants to build a career in London.</p>
       <a class="button-green" href="https://www.figma.com/proto/8zfU8nmZqmpNrOSR67OX35/Cool-Design?node-id=595%3A0&viewport=243%2C241%2C0.10011281073093414&scaling=min-zoom" target="_blanck">
-        building my portfolio 🚧
+        building my portfolio
       </a>
     </div>
 
