--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div class="card-white">
       <h1>Hello, I'm fabre </h1>
       <h2>graphic and UX&UI designer and developer</h2>
-      <img src="/images/me_profile.jpeg" class="img-circle" width="100px" alt="">
+      <img src="images/me_profile.jpeg" class="img-circle" width="100px" alt="">
       <p> I am a young graphic and UI designer (UX lover), that after 2 years working in a web developer and marketing agency, wants to build a career in London.</p>
       <a class="button-green" href="https://www.figma.com/proto/8zfU8nmZqmpNrOSR67OX35/Cool-Design?node-id=595%3A0&viewport=243%2C241%2C0.10011281073093414&scaling=min-zoom" target="_blanck">
         building my portfolio
